--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@square/web-sdk": "^2.0.1",
+    "@types/cors": "^2.8.17",
     "canvas-confetti": "^1.9.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "square": "^39.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
